--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -1,4 +1,4 @@
 \documentclass[../main.tex]{subfiles}
 
 \chapter{Conclusion}
-The software that has been developed and is described in this report, demonstrates that it is possible to detect and mitigate a spoofing attack like the ones performed with the Civil GPS spoofer, with a spoof proof atomic clock controller. It also demonstrated the stability and capability of the Sensor Server architecture and implementation. 
+The software that has been developed and is described in this report, demonstrates that it is possible to detect and mitigate a spoofing attack like the ones performed with the Civil GPS spoofer, using a spoof proof atomic clock controller. It also demonstrates the efficiency of network enabling GPS receivers and using a Client/Server architecture to collect data over a network.   
