--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -3,7 +3,7 @@
 \chapter{Discussion}\label{discussion}
 
 \section{Test results}
-During the GPS manipulation tests as described under chapter \ref{gps_manipulation}, the Sensor Server part of the atomic clock controller worked perfectly. The system was stable and performed as designed over longer periods of time (over 4 days). The system logged data reliably and without fault, accepted connections and was responsive at all times tested. There were no memory leaks or segmentation faults and the system facilitated the detection of our GPS manipulation attempt with an a latency of 2 seconds (SPØR HARALD, HAN NEVNTE NOE HER). The communication with the atomic clock also worked flawless, providing data for logging and for the model as expected. The system did however fail to steer the atomic clock. When we attempted to reset and debug the system, we encountered a bug in the clock model as well. The bug affected the way the clock model initializes from the configuration file which meant that the model would need at least 48 hours to rebuild. The decision was made that we did not have enough time and the system was left the way it was. 
+During the GPS manipulation tests as described under chapter \ref{gps_manipulation}, the Sensor Server part of the atomic clock controller worked perfectly. The system was stable and performed as designed over longer periods of time (over 4 days). The system logged data reliably and without fault, accepted connections and was responsive at all times tested. There were no memory leaks or segmentation faults and the system facilitated the detection of our GPS manipulation attempt with an a latency of 2 seconds (SPØR HARALD, HAN NEVNTE NOE HER).The system would probably react faster if it received GPS data more often. The communication with the atomic clock also worked flawless, providing data for logging and for the model as expected. The system did however fail to steer the atomic clock. When we attempted to reset and debug the system, we encountered a bug in the clock model as well. The bug affected the way the clock model initializes from the configuration file which meant that the model would need at least 48 hours to rebuild. It was decided that we therefor did not have enough to fix it. 
 
 \section{Shortcomings in current implementation}
 This section is used to discuss some of the shortcomings in the current version of the atomic clock controller and Sensor Server. Some functions were never implemented and others were not finished in time.
