--- a/thesis/hw.tex
+++ b/thesis/hw.tex
@@ -11,4 +11,5 @@ We chose to cast the Raspberry Pi 3 Model B (RASPI3) in the role as the host run
 We chose to use at least two GPS receivers. Both of the receivers should collect data and feed it to the atomic clock controller, but one of the receivers should also double as a 1 PPS disciplining source for the atomic clock. Considering the need for a stable 1 PPS source, we propose to use the u-blox NEO-M8T. This is a relativity affordable GPS receiver with a temperature compensated crystal oscillator (TCXO), 3 concurrent GPS reception and an external antenna \cite{UBLOXM8T}. In the current imple mentation of the atomic clock controller, only NMEA data is collected from the GPS receivers (see section \ref{nmea_data} for more about NMEA data). However in the future it might be beneficial to collect and process raw data\footnote{The ublox M8T is capable of outputting RAW data. This is for example used by RTKLIB (http://www.rtklib.com/) instead of NMEA} from the receivers as well. Since most GPS receivers today follow the NMEA standard (to some extent) and raw data currently isn't required, common and popular receivers like the u-blox NEO series should be more than sufficient for use in our implementation.
 
 \subsection{GPS receiver configuration}
+Data is sent from the GPS receivers every second. This is a configurable value. The u-blox M8T is capable of 
 According to the u-blox NEO-M8Ts manual \cite{UBLOXM8TMANUAL}, the device includes a feature called \textit{Fixed Position}. This is a feature that must be enabled in order to put device in \textit{Time Mode}. This feature makes the device solve time with higher certainty even with fewer available satellites. The \textit{Time mode} was not used, relied on or accounted for, in our solution. 
