--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -156,7 +156,7 @@ program={Informatikk: programmering og nettverk},
 long]
 
 \begin{abstract}
-Abstract goes here.
+We present in this report, our work with developing a system that we believe should be able to detect GPS spoofing attacks done with a advanced, state of the art GPS spoofer.
 \end{abstract}
 
 \chapter*{Foreword}
