Updated thesis, converted PDF to PNG

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -199,6 +199,8 @@ The parameter steer\_limit will be read from a configuration file. The limit is 
 		\pythoncode{../server/query_csac.py}
 	\section*{MJD calculator}\label{get_mjd}
 		\pythoncode{../server/get_mjd.py}	
+	\section*{Script example}\label{script_example}
+		\pythoncode{source_files/script_example.py}	
 
 \section{Logger setup schematic}\label{CLS}
 	 \includegraphics[scale=0.5]{csac_logger.pdf}
