--- a/thesis/software.tex
+++ b/thesis/software.tex
@@ -1,35 +1,35 @@
 \documentclass[../main.tex]{subfiles}
 
 \chapter{Atomic clock controller architecture}
-When discussing how to implement the software realizing the spoof proof atomic clock controller, the following features and requirements were found: 
+When discussing how to implement the software realizing the spoof proof atomic clock controller, the following features and requirements were identified: 
 \begin{itemize}
-  \item Needs to be fast in order to detect attacks early to maximize mitigation.
-  \item Needs extensive logging capabilities for forensics.
-  \item Needs access to all data in order to cross check Sensor data.
+  \item Speed and efficiency is important in order to detect attacks as early as possible.
+  \item Extensive logging capabilities for forensics.
+  \item Easy and fast access to all gathered data.
   \item Should support as many GPS receivers as possible.
-  \item Easy interfacing, remote control.
+  \item Easy interfacing. Should be possible to operate over Telnet/SSH.
   \item Easy to configure.
   \item Graphical user interface not a requirement
 \end{itemize}
 
 \section{Client/Server model}
-In order to connect many GPS receivers to the atomic clock controller, we decided to implement a client/server model. The atomic clock controller serves the same purpose as before, but also doubles as a server. The data transmitted, will still be the same, the only difference is the interface and media. A network interface will be used instead of USB, and the media can be whatever is available since TCP/IP is designed to be hardware independent. This means that one could for example use:
+In order to connect many GPS receivers to the atomic clock controller, we decided to implement a client/server model. The atomic clock controller serves the same purpose as before, but doubles as a server. The data transmitted, will still be the same, the only difference is the interface and media. A network interface will be used instead of USB, and the media can be whatever is available since TCP/IP is designed to be hardware independent. This means that one could for example use:
 \begin{itemize}
   \item Twisted pair
   \item Fiber optics
   \item WiFi
   \item 4G (cellular)
 \end{itemize}
-Because reaction time is a concern, high latency media is not recommended \footnote{IP over Avian Carriers as described in RFC 1149 is highly discouraged}. The GPS receivers that we have chosen to use, does not have a network interface, we instead use Raspberry PIs. Considering how cheap single board computer have become, the price of a Raspberry PI can be justified even just to network enable a GPS receiver. The latest model of the Raspberry Pi has even got a built in wireless network interface. See \ref{platform} for more about the Raspberry Pi 3. The combination the GPS receiver and the Raspberry PI, is in this report abstractly seen as one device. We call this device a Sensor. The Sensor is responsible for reporting data to the Server and not much more. The Sensor can be deployed using already existing infrastructure to communicate, thus making it easier to deploy than if each GPS receiver had to cabled directly to the atomic clock controller. There is no denying that the implementation of a Server/Client model greatly increases the complexity of the atomic clock controller software, but it makes up for it by eliminating the need for long signal cables and amplifiers. We call this approach the Sensor Server model.
+Because reaction time is a concern, high latency media is not recommended \footnote{IP over Avian Carriers as described in RFC 1149 is highly discouraged}. The GPS receivers that we have chosen to use, does not have a network interface, we instead use Raspberry PIs. A GPS receiver is connected to a Raspberry PI thus giving it a network interface. Considering how cheap single board computer have become, the price of a Raspberry PI can be justified even just to network enable a GPS receiver. The latest model of the Raspberry Pi has even got a built in wireless network interface. See \ref{platform} for more about the Raspberry Pi 3. The combination the GPS receiver and the Raspberry PI, is in this report abstractly seen as one device. We call this device a Sensor. The Sensor is responsible for reporting data to the Server and not much more. The Sensor can be deployed using already existing infrastructure to communicate, thus making it easier to deploy than if each GPS receiver had to cabled directly to the atomic clock controller. There is no denying that the implementation of a Server/Client model greatly increases the complexity of the atomic clock controller software, but it makes up for it by eliminating the need for long signal cables and amplifiers. We call this approach the \textit{Sensor Server} model.
 
-\section{Architecture description}
+\section{Architecture description}\label{arch_desc}
 In order to connect the Sensors to the server, the atomic clock controllers software needs to be able to:
 \begin{itemize}
   \item Handle connections to clients.
   \item Update structures as clients status changes (disconnects or gets kicked out).
   \item Receive data from clients
 \end{itemize}
-These are tasks that the atomic clock controller needs to be able to perform as well as controlling the clock and analyzing data. In order to implement the Server/Client model, the Server is implemented using the Linux Socket API.The API is based on BSD sockets and are available in in almost all Unix-like operating system (\cite{LINUX_KERNEL}, p.610). A socket is a handle that can be passed by a program to the network API in order to use the network connection. The plan was briefly to use Glib \cite{GLIB}, a library that provides building blocks for libraries and applications written in C, instead of using low-level sockets. This idea was scrapped because I felt that it would be overkill for this implementation. This decision is discussed under subsection \ref{glib}. 
+These are tasks that the atomic clock controller needs to be able to perform as well as controlling the clock and analyzing data. In order to implement the Server/Client model, the Server is implemented using the Linux Socket API. The API is based on BSD sockets and are available in in almost all Unix-like operating system (\cite{LINUX_KERNEL}, p.610). A socket is a handle that can be passed by a program to the network API in order to use the network connection. The plan was briefly to use Glib \cite{GLIB}, a library that provides building blocks for libraries and applications written in C, instead of using low-level sockets. This idea was scrapped because I felt that it would be overkill for this implementation. This decision is discussed under subsection \ref{glib}. 
 
 Having decided \textit{how} the clients should connect to the server, the next challenge becomes how the server should communicate with the clients and vice versa. We decided to use what is called \textit{blocking I/O} and \textit{fork()}. This is a very common approach, but not the fastest (\cite{UNIXN_WBA}, p. 188). It is however quite easy to implement. Blocking I/O means that read operations on the socket blocks the main thread in the process until data has been received. This is not as dramatic as it might seem: If a Socket call cannot be completed immediately, the process who issued the call will be put to sleep thus enabling the scheduler to schedule other processes for execution until conditions are right for the sleeping process (\cite{UNIXN_WBA}, p.435). Fork() is a system call used to create a new process. The new process is called a child and the process that called the fork() system call, is the parent. The child process is a duplicate of the parent process. The alternative to using fork(), is to create a thread. The creation of threads are typically less expensive in terms of CPU cycles than the creation of processes, but presents their own challenges. Processes always have their own virtual address space as opposed to threads who share their address space with the other threads within the process. This makes programming with threads more complex. The result of a thread crashing can have a more severe impact on the other threads within the same process since they all shared the same data. The new process is used by the server to handle the newly created connection. This means that for every connected client, there is a process created. This of course means that this solution does not scale awfully well. This is however not a big problem for us since the time taken for a Sensor to connect to the server really doesn't matter. Once all Sensors in a setup has connected, they should not disconnect unless taken down for maintenance or replacement. 
 
@@ -147,7 +147,7 @@ The parser and handler are responsible for parsing data received from a client a
 \subsection{GPS filter}\label{gps_filters}
 There is currently only one filter using GPS data in the Sensor Server implementation to this data. This is the \textit{Location and speed filter}. Figure \ref{gps_filters} is a block diagram showing the filter as a part of the Sensor Server.
 
-\subsubsection{Location and speed filter}
+\subsubsection{Location and speed filter}\label{ls_filter}
 \begin{figure}
 \centering
   \includegraphics[scale=0.3]{filters.pdf}
