--- a/thesis/spoof_test.tex
+++ b/thesis/spoof_test.tex
@@ -32,7 +32,7 @@ Figure \ref{ibd} shows how the Server, Sensors and atomic clock were physically 
 
 \section{Test 1}
 \subsection{Goal of test}
-The goal with this test was to use the atomic clock controller to detect a simulated spoofing attack. By moving the antennas, the LS filter should be triggered as the solved longitude, altitude, latitude and speed should change. See \ref{kvsrlf} for more about the LS filter. The result would be observable by analyzing the log files produced by the Server and Clients and the data collected by the measuring setup.
+The goal with this test was to use the atomic clock controller to detect a simulated spoofing attack. By moving the antennas, the LS filter should be triggered as the solved longitude, altitude, latitude and speed should change. See \ref{ls_filter} for more about the LS filter. The result would be observable by analyzing the log files produced by the Server and Clients and the data collected by the measuring setup.
 
 \subsection{Description}\label{test1_description}
 The following is a step by step description of how the test was conducted. The time in the brackets was obtained from a wristwatch. It is written in the normal format as well as number of seconds after 10:48. This is because the data used to draw the graphs, started at 10:48 but uses seconds in the X axis. Comparison is therefore easier. It is important to note that nor the resolution or accuracy was of any notable concern when writing down the time. The time was mainly noted to make it easier to find any correlation between the steps taken and patterns found in the log files. 
@@ -101,21 +101,21 @@ The following figures are plots of the GPS data (NMEA) that was logged by the Se
 
 \begin{sidewaysfigure}
   \centering
-  \includegraphics[width=1\textwidth]{gnssAlt1.pdf}
+  \includegraphics[width=1\textwidth]{gnssAlt1-1.png}
   \caption{The figure shows the solved altitude of the GPS receiver connected to Sensor 1, during test 1}
   \label{sensor1_alt}
 \end{sidewaysfigure}
 
 \begin{sidewaysfigure}
   \centering
-  \includegraphics[width=1\textwidth]{gnssAlt2.pdf}
+  \includegraphics[width=1\textwidth]{gnssAlt2-1.png}
   \caption{The figure shows the solved altitude of the GPS receiver connected to Sensor 2, during test 1}
   \label{sensor2_alt}
 \end{sidewaysfigure}
 
 \begin{sidewaysfigure}
   \centering
-  \includegraphics[width=1\textwidth]{gnssLat1.pdf}
+  \includegraphics[width=1\textwidth]{gnssLat1-1.png}
   \caption{The figure shows the solved latitude of the GPS receiver connected to Sensor 1, during test 1}
   \label{sensor1_lat}
 \end{sidewaysfigure}
@@ -123,7 +123,7 @@ The following figures are plots of the GPS data (NMEA) that was logged by the Se
 
 \begin{sidewaysfigure}
   \centering
-  \includegraphics[width=1\textwidth]{gnssLat2.pdf}
+  \includegraphics[width=1\textwidth]{gnssLat2-1.png}
   \caption{The figure shows the solved latitude of the GPS receiver connected to Sensor 2, during test 1}
   \label{sensor2_lat}
 \end{sidewaysfigure}
@@ -131,7 +131,7 @@ The following figures are plots of the GPS data (NMEA) that was logged by the Se
 
 \begin{sidewaysfigure}
   \centering
-  \includegraphics[width=1\textwidth]{gnssLong1.pdf}
+  \includegraphics[width=1\textwidth]{gnssLong1-1.png}
   \caption{The figure shows the solved longitude of the GPS receiver connected to Sensor 1, during test 1}
   \label{sensor1_long}
 \end{sidewaysfigure}
@@ -139,7 +139,7 @@ The following figures are plots of the GPS data (NMEA) that was logged by the Se
 
 \begin{sidewaysfigure}
   \centering
-  \includegraphics[width=1\textwidth]{gnssLong2.pdf}
+  \includegraphics[width=1\textwidth]{gnssLong2-1.png}
   \caption{The figure shows the solved longitude of the GPS receiver connected to Sensor 2, during test 1}
   \label{sensor2_long}
 \end{sidewaysfigure}
@@ -147,7 +147,7 @@ The following figures are plots of the GPS data (NMEA) that was logged by the Se
 
 \begin{sidewaysfigure}
   \centering
-  \includegraphics[width=1\textwidth]{gnssSpeed1.pdf}
+  \includegraphics[width=1\textwidth]{gnssSpeed1-1.png}
   \caption{The figure shows the solved speed of the GPS receiver connected to Sensor 1, during test 1}
   \label{sensor1_speed}
 \end{sidewaysfigure}
@@ -155,7 +155,7 @@ The following figures are plots of the GPS data (NMEA) that was logged by the Se
 
 \begin{sidewaysfigure}
   \centering
-  \includegraphics[width=1\textwidth]{gnssSpeed2.pdf}
+  \includegraphics[width=1\textwidth]{gnssSpeed2-1.png}
   \caption{The figure shows the solved speed of the GPS receiver connected to Sensor 2, during test 1}
   \label{sensor2_speed}
 \end{sidewaysfigure}
@@ -167,14 +167,14 @@ Figure \ref{cns91_tel_freq} shows the relative frequency offset($10^{12}$) for t
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[width=1\textwidth]{cns91-and-csac-telemetry-frequency.pdf}
+  \includegraphics[width=1\textwidth]{cns91-and-csac-telemetry-frequency-1.png}
   \caption{The figure shows the relative frequency offset for the atomic clock. The thick dark plot in the middle is from telemetry data gathered from the atomic clock. The lighter plot in the background is data from the CNT-91 frequency counter.}
   \label{cns91_tel_freq}
 \end{figure} 
 
 \begin{sidewaysfigure}
   \centering
-  \includegraphics[width=1\textwidth]{cns91-and-csac-telemetry-phase.pdf}
+  \includegraphics[width=1\textwidth]{cns91-and-csac-telemetry-phase-1.png}
   \caption{The figure shows the phase offset in nanoseconds for the atomic clock. The thick dark plot is from telemetry data gathered from the atomic clock. The lighter thin plot is data from the CNT-91 frequency counter.}
   \label{cns91_tel_phase}
 \end{sidewaysfigure}
@@ -237,7 +237,7 @@ Figure \ref{sensor2_everything} shows the plotted GPS data collected during test
 
 \begin{figure}
   \centering
-  \includegraphics[width=1\textwidth]{20161024-test2-sensor2-multipanel.pdf}
+  \includegraphics[width=1\textwidth]{20161024-test2-sensor2-multipanel-1.png}
   \caption{The figure shows (from the top) the latitude, longitude, altitude, speed and number of satellites as plotted from the GPS data collected during test 2.}
   \label{sensor2_everything}
 \end{figure} 
@@ -248,7 +248,7 @@ Figure \ref{sensor2_measure} shows measurements done during test 2 as two graphs
 
 \begin{figure}
   \centering
-  \includegraphics[width=1\textwidth]{20161024-test2-telemetry-and-cnt91-combined.pdf}
+  \includegraphics[width=1\textwidth]{20161024-test2-telemetry-and-cnt91-combined-1.png}
   \caption{The top figure shows a set of plots. The first plot is phase offset in nanoseconds. The long, sloped light line is a plot of the measurements done by the CNT-91 frequency counter. The dotted dark plot, is also the phase offset but as reported by the atomic clock. The bottom figure also shows two plots. Once again, the lighter plot in the background is relative frequency offset as measured by the CNT-91 frequency counter. The dark plot is frequency offset as reported by the atomic clock.}
   \label{sensor2_measure}
 \end{figure} 
@@ -269,21 +269,21 @@ The data presented in this section was gathered while the atomic clock controlle
 
 \begin{figure}
   \centering
-  \includegraphics[width=1\textwidth]{disturbance57667-gps-sensor2-multipanel.pdf}
+  \includegraphics[width=1\textwidth]{disturbance57667-gps-sensor2-multipanel-1.png}
   \caption{Figure shows solved position, speed and number of satellites as reported by the GPS receiver.}
   \label{disturbance_multipanel}
 \end{figure}
 
 \begin{figure}
   \centering
-  \includegraphics[width=1\textwidth]{disturbance57667-cnt91-csac-telemetry-phase-frequency-steer-combined.pdf}
+  \includegraphics[width=1\textwidth]{disturbance57667-cnt91-csac-telemetry-phase-frequency-steer-combined-1.png}
   \caption{Top figure shows phase offset in nanoseconds. The thin lightly colored line is as measured by the CNT-91 frequency counter. The solid darker line is from the telemetry string from the atomic clock.}
   \label{disturbance_phase_frequency}
 \end{figure}
 
 \begin{figure}
   \centering
-  \includegraphics[width=1\textwidth]{disturbance57667-csac-telemetry-phase-steer-combined-zoom-in-2.pdf}
+  \includegraphics[width=1\textwidth]{disturbance57667-csac-telemetry-phase-steer-combined-zoom-in-2-1.png}
   \caption{Figure shows the phase offset and steering correction as reported in the telemetry string from the atomic clock.}
   \label{disturbance_phase_steer}
 \end{figure} 
